logs/kaptl.log
Listing '.'...
Listing './bin'...
Listing './examples'...
Compiling './examples/ex1_percentage_indicator_stderr.py'...
Compiling './examples/ex1_percentage_indicator_stdout.py'...
Compiling './examples/ex1_progress_bar_stderr.py'...
Compiling './examples/ex1_progress_bar_stdout.py'...
Compiling './examples/ex2_percent_indicator_allargs.py'...
Compiling './examples/ex2_progressbar_allargs.py'...
Compiling './examples/ex3_percentage_indicator_monitor.py'...
Compiling './examples/ex3_progress_bar_monitor.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyPrind-2.9.2.egg-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.6.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.1.egg-info'...
Listing './lib/python3.5/site-packages/kaptl'...
Compiling './lib/python3.5/site-packages/kaptl/Common.py'...
***   File "./lib/python3.5/site-packages/kaptl/Common.py", line 23
    print "Exiting the program..."
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlAdd.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlAdd.py", line 15
    print "Rule is added to a rules file"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlClient.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlClient.py", line 29
    print "Parsing the rules..."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlInit.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlInit.py", line 26
    print "ERROR: Cannot find rules to use for creating a project. Aborting..."
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlParse.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlParse.py", line 27
    print "ERROR: Cannot find rules to use for creating a project. Aborting..."
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlProject.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlProject.py", line 31
    print "ERROR: Cannot find rules to use for creating a project. Aborting..."
                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlShow.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlShow.py", line 12
    print "App name: " + self.manifest["appName"]
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlStatus.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlStatus.py", line 29
    print joined_diff
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlUpdate.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlUpdate.py", line 21
    print "ERROR: Directory does not contain a KAPTL project"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/KaptlVersions.py'...
***   File "./lib/python3.5/site-packages/kaptl/KaptlVersions.py", line 25
    print "Available versions for '" + self.recipe + "' recipe:"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/Utils.py'...
***   File "./lib/python3.5/site-packages/kaptl/Utils.py", line 92
    print "ERROR: Couldn't read from a file " + path + ". Check if you have a file named rules.kaptl in " \
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/kaptl/main.py'...
***   File "./lib/python3.5/site-packages/kaptl/main.py", line 80
    print "Use of KAPTL requires a license key. Obtain a valid key at www.kaptl.com and use --license" \
                                                                                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kaptl-0.5.0.9.egg-info'...
Listing './lib/python3.5/site-packages/pathspec'...
Listing './lib/python3.5/site-packages/pathspec/patterns'...
Listing './lib/python3.5/site-packages/pathspec/tests'...
Listing './lib/python3.5/site-packages/pathspec-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyprind'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests/packages'...
Listing './lib/python3.5/site-packages/requests/packages/chardet'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/requests/packages/urllib3/util'...
Listing './lib/python3.5/site-packages/requests-2.8.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.8.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
